--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <div class="main-block">
 
-        <img class="main-img" src="/img/blogimage.png" alt="">
+        <img class="main-img" src="img/blogimage.png" alt="">
         <button class="btn-yellow">Learning</button><br>
 
         <p class="data">Published 21 Dec 2023</p>
@@ -20,7 +20,7 @@
 
         <div class="author">
 
-        <img class="author-img" src="/img/userpic.png" alt="">
+        <img class="author-img" src="img/userpic.png" alt="">
         <p class="name">Greg Hooper</p>
 
         </div>
